Asl/src/parser/AslParser.java
// $ANTLR 3.4 /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g 2015-05-15 16:34:22

    package parser;
    import interp.AslTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGLIST", "ASSIGN", "AVANZAR", "BOOLEAN", "COMMENT", "DIV", "DMOTOR", "DO", "DSENSOR", "ELSE", "ENDFUNC", "ENDIF", "ENDWHILE", "EQUAL", "ESC_SEQ", "FALSE", "FUNC", "FUNCALL", "GE", "GETCOLOR", "GETTOUCH", "GETULTRA", "GMOTOR", "GSENSOR", "GT", "ID", "IF", "INCL", "INCLUDE", "INT", "LE", "LIST_FUNCTIONS", "LIST_INCLUDES", "LIST_INSTR", "LT", "MGETTER", "MINUS", "MOD", "MOTOR", "MSETTER", "MUL", "NOT", "NOT_EQUAL", "OBJECT", "OR", "PARAMS", "PARAR", "PLUS", "PREF", "PROG", "PVALUE", "READ", "RETURN", "SENSOR", "SLEEP", "SMOTOR", "SSLEEP", "STRING", "THEN", "TIPO", "TRUE", "VOID", "WHILE", "WRITE", "WS", "'('", "')'", "','", "'.'", "';'"
    };

    public static final int EOF=-1;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int AND=4;
    public static final int ARGLIST=5;
    public static final int ASSIGN=6;
    public static final int AVANZAR=7;
    public static final int BOOLEAN=8;
    public static final int COMMENT=9;
    public static final int DIV=10;
    public static final int DMOTOR=11;
    public static final int DO=12;
    public static final int DSENSOR=13;
    public static final int ELSE=14;
    public static final int ENDFUNC=15;
    public static final int ENDIF=16;
    public static final int ENDWHILE=17;
    public static final int EQUAL=18;
    public static final int ESC_SEQ=19;
    public static final int FALSE=20;
    public static final int FUNC=21;
    public static final int FUNCALL=22;
    public static final int GE=23;
    public static final int GETCOLOR=24;
    public static final int GETTOUCH=25;
    public static final int GETULTRA=26;
    public static final int GMOTOR=27;
    public static final int GSENSOR=28;
    public static final int GT=29;
    public static final int ID=30;
    public static final int IF=31;
    public static final int INCL=32;
    public static final int INCLUDE=33;
    public static final int INT=34;
    public static final int LE=35;
    public static final int LIST_FUNCTIONS=36;
    public static final int LIST_INCLUDES=37;
    public static final int LIST_INSTR=38;
    public static final int LT=39;
    public static final int MGETTER=40;
    public static final int MINUS=41;
    public static final int MOD=42;
    public static final int MOTOR=43;
    public static final int MSETTER=44;
    public static final int MUL=45;
    public static final int NOT=46;
    public static final int NOT_EQUAL=47;
    public static final int OBJECT=48;
    public static final int OR=49;
    public static final int PARAMS=50;
    public static final int PARAR=51;
    public static final int PLUS=52;
    public static final int PREF=53;
    public static final int PROG=54;
    public static final int PVALUE=55;
    public static final int READ=56;
    public static final int RETURN=57;
    public static final int SENSOR=58;
    public static final int SLEEP=59;
    public static final int SMOTOR=60;
    public static final int SSLEEP=61;
    public static final int STRING=62;
    public static final int THEN=63;
    public static final int TIPO=64;
    public static final int TRUE=65;
    public static final int VOID=66;
    public static final int WHILE=67;
    public static final int WRITE=68;
    public static final int WS=69;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AslParser.tokenNames; }
    public String getGrammarFileName() { return "/home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:69:1: prog : list_includes list_funcs -> ^( PROG list_includes list_funcs ) ;
    public final AslParser.prog_return prog() throws RecognitionException {
        AslParser.prog_return retval = new AslParser.prog_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.list_includes_return list_includes1 =null;

        AslParser.list_funcs_return list_funcs2 =null;


        RewriteRuleSubtreeStream stream_list_includes=new RewriteRuleSubtreeStream(adaptor,"rule list_includes");
        RewriteRuleSubtreeStream stream_list_funcs=new RewriteRuleSubtreeStream(adaptor,"rule list_funcs");
        try {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:69:8: ( list_includes list_funcs -> ^( PROG list_includes list_funcs ) )
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:69:10: list_includes list_funcs
            {
            pushFollow(FOLLOW_list_includes_in_prog296);
            list_includes1=list_includes();

            state._fsp--;

            stream_list_includes.add(list_includes1.getTree());

            pushFollow(FOLLOW_list_funcs_in_prog298);
            list_funcs2=list_funcs();

            state._fsp--;

            stream_list_funcs.add(list_funcs2.getTree());

            // AST REWRITE
            // elements: list_includes, list_funcs
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 69:35: -> ^( PROG list_includes list_funcs )
            {
                // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:69:38: ^( PROG list_includes list_funcs )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(PROG, "PROG")
                , root_1);

                adaptor.addChild(root_1, stream_list_includes.nextTree());

                adaptor.addChild(root_1, stream_list_funcs.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class list_includes_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_includes"
    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:1: list_includes : ( include )* -> ^( LIST_INCLUDES ( include )* ) ;
    public final AslParser.list_includes_return list_includes() throws RecognitionException {
        AslParser.list_includes_return retval = new AslParser.list_includes_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.include_return include3 =null;


        RewriteRuleSubtreeStream stream_include=new RewriteRuleSubtreeStream(adaptor,"rule include");
        try {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:15: ( ( include )* -> ^( LIST_INCLUDES ( include )* ) )
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:17: ( include )*
            {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:17: ( include )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==INCLUDE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:17: include
            	    {
            	    pushFollow(FOLLOW_include_in_list_includes325);
            	    include3=include();

            	    state._fsp--;

            	    stream_include.add(include3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: include
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 72:26: -> ^( LIST_INCLUDES ( include )* )
            {
                // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:29: ^( LIST_INCLUDES ( include )* )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_INCLUDES, "LIST_INCLUDES")
                , root_1);

                // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:72:45: ( include )*
                while ( stream_include.hasNext() ) {
                    adaptor.addChild(root_1, stream_include.nextTree());

                }
                stream_include.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_includes"


    public static class list_funcs_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "list_funcs"
    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:1: list_funcs : ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) ;
    public final AslParser.list_funcs_return list_funcs() throws RecognitionException {
        AslParser.list_funcs_return retval = new AslParser.list_funcs_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token EOF5=null;
        AslParser.func_return func4 =null;


        AslTree EOF5_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        try {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:12: ( ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) )
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:14: ( func )+ EOF
            {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:14: ( func )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==TIPO||LA2_0==VOID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:14: func
            	    {
            	    pushFollow(FOLLOW_func_in_list_funcs347);
            	    func4=func();

            	    state._fsp--;

            	    stream_func.add(func4.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_list_funcs350);  
            stream_EOF.add(EOF5);


            // AST REWRITE
            // elements: func
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 74:24: -> ^( LIST_FUNCTIONS ( func )+ )
            {
                // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:74:27: ^( LIST_FUNCTIONS ( func )+ )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "list_funcs"


    public static class include_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:77:1: include : INCLUDE p= ID '/' f= ID -> ^( INCL $p $f) ;
    public final AslParser.include_return include() throws RecognitionException {
        AslParser.include_return retval = new AslParser.include_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token p=null;
        Token f=null;
        Token INCLUDE6=null;
        Token char_literal7=null;

        AslTree p_tree=null;
        AslTree f_tree=null;
        AslTree INCLUDE6_tree=null;
        AslTree char_literal7_tree=null;
        RewriteRuleTokenStream stream_DIV=new RewriteRuleTokenStream(adaptor,"token DIV");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_INCLUDE=new RewriteRuleTokenStream(adaptor,"token INCLUDE");

        try {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:77:9: ( INCLUDE p= ID '/' f= ID -> ^( INCL $p $f) )
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:77:11: INCLUDE p= ID '/' f= ID
            {
            INCLUDE6=(Token)match(input,INCLUDE,FOLLOW_INCLUDE_in_include384);  
            stream_INCLUDE.add(INCLUDE6);


            p=(Token)match(input,ID,FOLLOW_ID_in_include388);  
            stream_ID.add(p);


            char_literal7=(Token)match(input,DIV,FOLLOW_DIV_in_include389);  
            stream_DIV.add(char_literal7);


            f=(Token)match(input,ID,FOLLOW_ID_in_include392);  
            stream_ID.add(f);


            // AST REWRITE
            // elements: f, p
            // token labels: f, p
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_f=new RewriteRuleTokenStream(adaptor,"token f",f);
            RewriteRuleTokenStream stream_p=new RewriteRuleTokenStream(adaptor,"token p",p);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 77:31: -> ^( INCL $p $f)
            {
                // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:77:34: ^( INCL $p $f)
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(INCL, "INCL")
                , root_1);

                adaptor.addChild(root_1, stream_p.nextNode());

                adaptor.addChild(root_1, stream_f.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "include"


    public static class func_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:83:1: func : ( TIPO ID params block_instructions return_stmt ENDFUNC -> ^( FUNC TIPO ID params block_instructions return_stmt ) | VOID ID params block_instructions ENDFUNC -> ^( FUNC VOID ID params block_instructions ) );
    public final AslParser.func_return func() throws RecognitionException {
        AslParser.func_return retval = new AslParser.func_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token TIPO8=null;
        Token ID9=null;
        Token ENDFUNC13=null;
        Token VOID14=null;
        Token ID15=null;
        Token ENDFUNC18=null;
        AslParser.params_return params10 =null;

        AslParser.block_instructions_return block_instructions11 =null;

        AslParser.return_stmt_return return_stmt12 =null;

        AslParser.params_return params16 =null;

        AslParser.block_instructions_return block_instructions17 =null;


        AslTree TIPO8_tree=null;
        AslTree ID9_tree=null;
        AslTree ENDFUNC13_tree=null;
        AslTree VOID14_tree=null;
        AslTree ID15_tree=null;
        AslTree ENDFUNC18_tree=null;
        RewriteRuleTokenStream stream_ENDFUNC=new RewriteRuleTokenStream(adaptor,"token ENDFUNC");
        RewriteRuleTokenStream stream_TIPO=new RewriteRuleTokenStream(adaptor,"token TIPO");
        RewriteRuleTokenStream stream_VOID=new RewriteRuleTokenStream(adaptor,"token VOID");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_return_stmt=new RewriteRuleSubtreeStream(adaptor,"rule return_stmt");
        RewriteRuleSubtreeStream stream_block_instructions=new RewriteRuleSubtreeStream(adaptor,"rule block_instructions");
        RewriteRuleSubtreeStream stream_params=new RewriteRuleSubtreeStream(adaptor,"rule params");
        try {
            // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:83:9: ( TIPO ID params block_instructions return_stmt ENDFUNC -> ^( FUNC TIPO ID params block_instructions return_stmt ) | VOID ID params block_instructions ENDFUNC -> ^( FUNC VOID ID params block_instructions ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TIPO) ) {
                alt3=1;
            }
            else if ( (LA3_0==VOID) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:83:11: TIPO ID params block_instructions return_stmt ENDFUNC
                    {
                    TIPO8=(Token)match(input,TIPO,FOLLOW_TIPO_in_func436);  
                    stream_TIPO.add(TIPO8);


                    ID9=(Token)match(input,ID,FOLLOW_ID_in_func438);  
                    stream_ID.add(ID9);


                    pushFollow(FOLLOW_params_in_func440);
                    params10=params();

                    state._fsp--;

                    stream_params.add(params10.getTree());

                    pushFollow(FOLLOW_block_instructions_in_func442);
                    block_instructions11=block_instructions();

                    state._fsp--;

                    stream_block_instructions.add(block_instructions11.getTree());

                    pushFollow(FOLLOW_return_stmt_in_func444);
                    return_stmt12=return_stmt();

                    state._fsp--;

                    stream_return_stmt.add(return_stmt12.getTree());

                    ENDFUNC13=(Token)match(input,ENDFUNC,FOLLOW_ENDFUNC_in_func446);  
                    stream_ENDFUNC.add(ENDFUNC13);


                    // AST REWRITE
                    // elements: params, TIPO, return_stmt, block_instructions, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (AslTree)adaptor.nil();
                    // 83:65: -> ^( FUNC TIPO ID params block_instructions return_stmt )
                    {
                        // /home2/users/alumnes/1161255/dades/linux/CL/robot-cl/Asl/src/parser/Asl.g:83:68: ^( FUNC TIPO ID params block_instructions return_stmt )
                        {
                        AslTree root_1 = (AslTree)adaptor.nil();
                        root_1 = (AslTree)adaptor.becomeRoot(
                        (AslTree)adaptor.create(FUNC, "FUNC")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_TIPO.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, stream_params.nextTree());

                        adaptor.addChild(root_1, stream_block_instructions.nextTree());

                        adaptor.addChild(root_1, stream_return_stmt.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
